# agile-ffp

./: .gitignore  MANIFEST.in  README.md  capacity_sample.yml  dev-requirements.txt  dev.env  environment.yml  estimation.yml  estimation_sample.yml  milestones.yml  milestones_sample.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks_gantt_sample.yml
.cursor/rules/: server-development.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: cd.yaml  ci.yaml
context/: monsterui-ctx-full.txt
samples/: adt3.yaml  adt3_milestones.yaml  adt3_milestones_manual.yaml  aqualia.gsviewer.yaml  template.yaml
scripts/: bundle.sh  pro.sh  run.sh  setup-dev.sh
src/: startup.sh  states.csv
src/agileffp/: __init__.py  app.py  constants.py  main.py  settings.py  seville_calendar.py  test.py  utils.py  yaml_editor.py
src/agileffp/blueprints/: estimation.py  gantt.py  landing.py
src/agileffp/devops/: api.py  azure_query_results.py  azure_wit_states.py  config_sample.py  connect.py  download_states.py
src/agileffp/gantt/: capacity_team.py  dependency_graph.py  estimated_task.py  gantt.py  task.py  team.py  team_task.py
src/agileffp/milestone/: estimation.py  milestone.py
src/agileffp/projects/: api.py  config.py
src/agileffp/projects/models/: project.py
src/agileffp/roadmap/: charts.py  gantt.py
src/agileffp/templates/: base.html  landing.html
src/agileffp/yaml_editor/: api.py  config.py  render.py
tests/: conftest.py  main_should.py  server_should.py  seville_calendar_should.py  utils_should.py
tests/agileffp/: test_app.py  test_yaml_editor.py
tests/agileffp/roadmap/: test_gantt_build.py  test_gantt_iterations.py
tests/devops/: api_mock.py  api_should.py  azure_query_results_should.py  azure_wit_states_should.py
tests/devops/mock_data/: item_states.json  item_updates.json  query_result.json
tests/gantt/: capacity_team_should.py  estimated_task_should.py  gantt_compute_should.py  gantt_should.py  task_should.py  team_task_should.py
tests/milestone/: estimation_should.py  milestone_should.py
(+17 files in other folders)
