[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agile-ffp"
version = "1.0.2"
authors = [
  { name="Javier Carnero", email="javier@carnero.net"},
]
description = "Build agile charts for firm fixed price projects, to compute estimated milestones deadlines."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/emepetres/agile-ffp"
Issues = "https://github.com/emepetres/agile-ffp/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agileffp"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.coverage.run]
omit = [
  "tests/*",
]
source = [
  "src/agileffp"
]
relative_files = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.paths]
source = [
    "src/agileffp",
    "tests/"
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# Enable isort (`I`) rules
extend-select = ["I"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:_plotly_utils",
]